Fixed not showing infographic button

--- a/components/Article/Infographic/styles.module.css
+++ b/components/Article/Infographic/styles.module.css
@@ -23,7 +23,7 @@
 	box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.06);
 	border-top-left-radius: 100%;
 	border-bottom-left-radius: 100%;
-	z-index: 1;
+	z-index: 100;
 }
 
 .article-infographic__download-button-container {
@@ -33,7 +33,7 @@
 }
 
 .article-infographic__download-button-container a {
-	background-color: var(--science);
+	background-color: var(--gramar);
 	display: flex;
 	border-radius: 100%;
 	padding: 1rem;
@@ -43,7 +43,7 @@
 }
 
 .article-infographic__download-button-container a:hover {
-	background-color: #8b3ab1cc;
+	background-color: var(--gramar-c1);
 	box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.6);
 }
 
